--- a/test/css-test/Index.html
+++ b/test/css-test/Index.html
@@ -21,7 +21,7 @@
       <p>Hello World</p>
       <button class="ming-delete" aria-label="delete"></button>
     </div>
-    <div class="ming-message-body">
+    <div class="ming-message-body ming-ant-bg-magenta-5">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
     </div>
   </article>
